--- a/css/style.css
+++ b/css/style.css
@@ -23,10 +23,12 @@ body {
   position: relative;
   width: 290px;
   height: 205px;
-  border: 1px solid #7f7f7f;
   border-radius: 5px;
   transition: transform 0.2s ease-in-out;
   cursor: pointer;
+  -webkit-box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
+  -moz-box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
+  box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
 }
 
 .item:hover {
