--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@ body {
   align-items: center;
   justify-content: space-evenly;
   margin-bottom: 6px;
+  flex-wrap: wrap;
 }
 .block:first-child {
   margin-top: 10px;
