--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ body {
   }
 }
 .block:first-child {
-  margin-top: 10px;
+  margin-top: 25px;
 }
 
 .item {
@@ -34,10 +34,13 @@ body {
   -moz-box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
   box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
   margin-bottom: 10px;
+  cursor: pointer;
+  background-color: #fff;
 }
 
 .item:hover {
-  transform: scale(1.02);
+  transform: scale(1.4);
+  z-index: 2222;
 }
 .rimgroup-logo {
   position: absolute;
